--- a/src/docs/Api.mdx
+++ b/src/docs/Api.mdx
@@ -81,8 +81,8 @@ const registerResponse = await registerUser({
   username: "user1",
   email: 'user@example.com',
   password: 'password123',
-  firstName: 'John',
-  lastName: 'Doe'
+  first_name: 'John',
+  last_name: 'Doe'
 });
 ```
 
